# Self-Maps-Reader

./: README.md  gradle.properties  settings.gradle
.github/workflows/: android-ci.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c
app/src/main/java/com/example/procmapsreader/: MainActivity.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
